<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/common_bottom"
    android:orientation="horizontal" >
    
	<RadioButton android:id="@+id/index_common"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:button="@null"
	    android:gravity="center"
	    android:text="@string/rub_course_home_text"
	    android:drawableTop="@drawable/rub_course_home_page_not_selected_bg"/>
	<RadioButton android:id="@+id/category_common"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:button="@null"
	    android:gravity="center"
	    android:text="@string/rub_course_category_text"
	    android:drawableTop="@drawable/rub_course_category_not_selected_bg"/>
	<RadioButton android:id="@+id/group_common"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:button="@null"
	    android:gravity="center"
	    android:text="@string/rub_course_group_text"
	    android:drawableTop="@drawable/rub_course_group_not_selected_bg"/>
	<RadioButton android:id="@+id/me_common"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:button="@null"
	    android:gravity="center"
	    android:text="@string/rub_course_me_text"
	    android:drawableTop="@drawable/rub_course_me_not_selected_bg"/>
</RadioGroup>
