<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <!-- 顶部 -->

    <include layout="@layout/top_home" />

    <!-- 广告栏 -->

    <ImageView
        android:id="@+id/advertise_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/advertise_icon"
        android:contentDescription="@null" />
    <!-- 内容 -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 音乐类 -->
                <RelativeLayout 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <ImageView
                        android:id="@+id/music_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/rub_course_home_page_height"
                        android:contentDescription="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/music_icon"
                        android:gravity="center"
                        android:textColor="@color/content_text_big"
                        android:textSize="16sp"
                        android:text="@string/home_music_category_text" />

                    <TextView
                        android:id="@+id/home_music_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@drawable/rub_course_more_icon"
                        android:text="@string/home_more_btn_text"
                        android:textColor="#fa7122" />
                </RelativeLayout>
                <!-- music category -->

                <com.example.customview.NoScrollGridView
                    android:id="@+id/gridview_music_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="8dp"
                    android:verticalSpacing="5dp"
                    android:numColumns="2"
                    />
            <!-- 舞蹈类 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/dance_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rub_course_home_page_height"
                        android:contentDescription="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/dance_icon"
                        android:gravity="center"
                        android:textColor="@color/content_text_big"
                        android:textSize="16sp"
                        android:text="@string/home_dance_category_text" />

                    <TextView
                        android:id="@+id/home_dance_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@drawable/rub_course_more_icon"
                        android:text="@string/home_more_btn_text"
                        android:textColor="#fa7122" />
                </RelativeLayout>
                <!-- dance category -->

                <com.example.customview.NoScrollGridView
                    android:id="@+id/gridview_dance_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="8dp"
                    android:verticalSpacing="5dp"
                    android:numColumns="2"
                     />
            
            <!-- 书法类 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/calligraphy_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rub_course_home_page_height"
                        android:contentDescription="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/calligraphy_icon"
                        android:gravity="center"
                        android:textColor="@color/content_text_big"
                        android:textSize="16sp"
                        android:text="@string/home_calligraphy_category_text" />

                    <TextView
                        android:id="@+id/home_calligraphy_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@drawable/rub_course_more_icon"
                        android:text="@string/home_more_btn_text"
                        android:textColor="#fa7122" />
                </RelativeLayout>
                <!-- calligraphy category -->

                <com.example.customview.NoScrollGridView
                    android:id="@+id/gridview_calligraphy_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:horizontalSpacing="8dp"
                    android:verticalSpacing="5dp"
                    android:numColumns="2"
                   >

                </com.example.customview.NoScrollGridView>
            
            <!-- 绘画类 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/paint_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rub_course_home_page_height"
                        android:contentDescription="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/paint_icon"
                        android:gravity="center"
                        android:textColor="@color/content_text_big"
                        android:textSize="16sp"
                        android:text="@string/home_paint_category_text" />

                    <TextView
                        android:id="@+id/home_paint_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@drawable/rub_course_more_icon"
                        android:text="@string/home_more_btn_text"
                        android:textColor="#fa7122" />
                </RelativeLayout>
                <!-- paint category -->

                <com.example.customview.NoScrollGridView
                    android:id="@+id/gridview_paint_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="8dp"
                    android:verticalSpacing="5dp"
                    android:numColumns="2"
                     >
                </com.example.customview.NoScrollGridView>
           
            <!-- 其他 -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/other_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/rub_course_home_page_height"
                        android:contentDescription="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/other_icon"
                       android:gravity="center"
                       android:textColor="@color/content_text_big"
                        android:textSize="16sp"
                        android:text="@string/home_other_category_text" />

                    <TextView
                        android:id="@+id/home_other_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@drawable/rub_course_more_icon"
                        android:text="@string/home_more_btn_text"
                        android:textColor="#fa7122" />
                </RelativeLayout>
                <!-- other category -->

                <com.example.customview.NoScrollGridView
                    android:id="@+id/gridview_other_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="8dp"
                    android:verticalSpacing="5dp"
                    android:numColumns="2"
                    >

                </com.example.customview.NoScrollGridView>
        </LinearLayout>
    </ScrollView>
   

</LinearLayout>